# osmium_vk_rust

./: Cargo.toml  build.rs  compile_shaders.sh
resources/shaders/: shader_frag.glsl
src/: main.rs  triangle.rs
src/OLD/: main.rs_Window_Sufrace+0.3SwapChain
